update dependences version