@@ -1,3 +1,26 @@
+/*
+ * The MIT License (MIT)
+ *
+ * Copyright (c) 2022 ${author}
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * of this software and associated documentation files (the "Software"), to deal
+ * in the Software without restriction, including without limitation the rights
+ * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in all
+ * copies or substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+ * SOFTWARE.
+ */
 package io.github.spencerpark.ijava.magics;
 
 import io.github.spencerpark.jupyter.kernel.magic.registry.LineMagic;
@@ -6,7 +29,6 @@ import io.github.spencerpark.jupyter.kernel.util.GlobFinder;
 import java.io.IOException;
 import java.util.List;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 public class ClasspathMagics {
@@ -28,7 +50,7 @@ public class ClasspathMagics {
                     }
                 })
                 .map(p -> p.toAbsolutePath().toString())
-                .collect(Collectors.toList());
+                .toList();
 
         jars.forEach(this.addToClasspath);
 
@@ -47,7 +69,7 @@ public class ClasspathMagics {
                     }
                 })
                 .map(p -> p.toAbsolutePath().toString())
-                .collect(Collectors.toList());
+                .toList();
 
         paths.forEach(this.addToClasspath);
 
